--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -6,5 +6,13 @@
     "appDesc": {
         "message": "Browse NFT websites freely using your browser.",
         "description": "Browse NFT websites freely using your browser."
+    },
+    "websiteSettings": {
+        "message": "Website Settings",
+        "description": "Website Settings"
+    },
+    "close": {
+        "message": "Close",
+        "description": "Close"
     }
 }
