--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -32,8 +32,8 @@
         "description": "Full Screen"
     },
     "images": {
-        "message": "Close",
-        "description": "Close"
+        "message": "Images",
+        "description": "Images"
     },
     "javascript": {
         "message": "JavaScript",
