--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -94,5 +94,9 @@
     "previousPageInfo": {
         "message": "Go to the previous page",
         "description": "Go to the previous page"
+    },
+    "pageSettingsInfo": {
+        "message": "Website Privacy Settings",
+        "description": "Website Privacy Settings"
     }
 }
