readme update again

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -4,8 +4,8 @@
         "description": "Fliclip Crypto Browser"
     },
     "appDesc": {
-        "message": "Browse NFT websites freely using your browser.",
-        "description": "Browse NFT websites freely using your browser."
+        "message": "Browser Emulator for open NFT websites freely using your browser.",
+        "description": "Browser Emulator for open NFT websites freely using your browser."
     },
     "websiteSettings": {
         "message": "Website Settings",
