--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -126,5 +126,9 @@
     "wallet": {
         "message": "Wallet",
         "description": "Wallet"
+    },
+    "convert_to_wallet": {
+        "message": "Convert Domain to Wallet Address",
+        "description": "Convert Domain to Wallet Address"
     }
 }
