messages error updated

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -162,5 +162,9 @@
     "cryptoManagerTitle": {
         "message": "Crypto Lookup",
         "description": "Crypto Lookup"
+    },
+    "invalidDNSDomain": {
+        "message": "The DNS server for this domain is invalid!",
+        "description": "The DNS server for this domain is invalid!"
     }
 }
