settings page prepare

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -166,5 +166,9 @@
     "invalidDNSDomain": {
         "message": "The DNS server for this domain is invalid!",
         "description": "The DNS server for this domain is invalid!"
+    },
+    "settings": {
+        "message": "Settings",
+        "description": "Settings"
     }
 }
